--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "react-markdown-editor",
+  "name": "markdown-editor-react",
+  "homepage": "https://mukezhz.github.io/markdown-editor-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -11,6 +13,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
